--- a/public/css/admin.scss
+++ b/public/css/admin.scss
@@ -15,6 +15,11 @@ $margin-block-content-h: 25px;
 $padding-block-content-v: 20px;
 $padding-block-content-h: 25px;
 
+/*--------------------------------------------------------------------------------------------
+*
+*	Basic options
+*
+*--------------------------------------------------------------------------------------------*/
 
 * {box-sizing: border-box;outline: none;}
 
@@ -32,158 +37,16 @@ $padding-block-content-h: 25px;
 .ai-c   {-ms-align-items: center; align-items: center;}
 .ai-fe  {-ms-align-items: flex-end; align-items: flex-end;}
 
-/*-----------------------SECTION NAVIGATION------------------------*/
-
-
-.rating-item-title, .rating-item-title input,
-.check-item-title, .check-item-title input {
-    width: 100%;
-}
-.rating-item-title b, .check-item-title b{
-    padding-top: 2px;
-    padding-right: 10px;
-    font-size: 16px;
-}
+/*-----------------------SECTION VS-FORM-BUILDER------------------------*/
 
 #vsfb-builder {
-    form {
-        width: 100%;
-        max-width: 600px;
-    }
-    .wrap-blocks {
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.1);
-
-        .head {
-            font-size: 16px;
-            font-weight: 400;
-            min-height: 64px;
-            padding: { 
-                top: 25px;
-                bottom: 25px;
-                right: 24px;
-                left: 24px; 
-            }
-            span {
-                font-weight: 700;
-            }
-        }
-
-        .block {
-            width: 100%;
-            border-top: 1px solid #EAECF0;
-            
-            &.active {
-                border-top: 1px solid #A5D2E7;
-
-                .block-head {
-                    background: #D8EBF5;
-                    &:hover {
-                        background: #D8EBF5;
-                    }
-                }
-
-            }
-
-            .block-head {
-                cursor: pointer;
-                padding: 8px 25px;
-                
-                .actions {
-                    width: 100%;
-                    color: $color-blue;
-                    .title {
-                        margin: 5px 0;
-                        &:hover {
-                            text-decoration: underline;
-                        }
-                    }
-                    span {
-                        margin-right: 0;
-                        padding: {
-                            left: 10px;
-                            bottom: 5px;
-                        }
-                        &:hover {
-                            text-decoration: underline;
-                        }
-                    }
-                    .copy {
-                        color: $color-danger;
-                    } 
-                }
-                &:hover {
-                    background-color: #f7fbfd;
-                }
-            }
-
-            .block-content {
-                border-top: 1px solid #EAECF0;
-                border-left: 4px solid #6BB5D8;
-                padding: 10px 25px 15px;
-
-                .add-item span {
-                    margin: 4px 0 0 8px;
-                }
-
-                .list {
-                    p {
-                        margin: 0;
-                        position: relative;
-                        width: 100%;
-                        b {
-                            font-size: 14px;
-                        }
-                        input {
-                            margin-left: 10px;
-                            padding-right: 30px;
-                        }
-                        .dashicons-no {
-                            position: absolute;
-                            top: 50%;
-                            right: 10px;
-                            border: 1px solid #3c434a;
-                            opacity: 0.6;
-                            border-radius: 50%;
-                            font-size: 18px;
-                            cursor: pointer;
-                            transform: translateY(-50%);   
-                            z-index: 1; 
-                            transition: opacity .4s;
-                            &:hover {
-                                border: 1px solid $color-blue;
-                                color: $color-blue;
-                                opacity: 1;
-                            }
-                        }
-                    }
-                    .item-icons {
-                        width: 100px;
-                        margin-left: 10px;
-                        flex-shrink: 0;
-                    }
-                }
-
-
-                .block-footer {
-                    margin-top: 15px;
-                }
-
-                hr {
-                    opacity: .8;
-                    margin: 15px -25px;
-                }
-            }
-            
-        }
-    }
 
     /*---------------------------------------------------------------------------------------------
 	*
 	*  All Inputs
 	*
 	*---------------------------------------------------------------------------------------------*/
+
 	input[type="text"],
 	input[type="search"],
 	input[type="number"],
@@ -305,4 +168,162 @@ $padding-block-content-h: 25px;
         }
     }
 
+    /*---------------------------------------------------------------------------------------------
+	*
+	*  Other options
+	*
+	*---------------------------------------------------------------------------------------------*/
+
+    form {
+        width: 100%;
+        max-width: 600px;
+    }
+    .wrap-blocks {
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.1);
+
+        .head {
+            font-size: 16px;
+            font-weight: 400;
+            min-height: 64px;
+            padding: { 
+                top: 25px;
+                bottom: 25px;
+                right: 24px;
+                left: 24px; 
+            }
+            span {
+                font-weight: 700;
+            }
+        }
+
+        .block {
+            width: 100%;
+            border-top: 1px solid #EAECF0;
+            
+            &.active {
+                border-top: 1px solid #A5D2E7;
+
+                .block-head {
+                    background: #D8EBF5;
+                    &:hover {
+                        background: #D8EBF5;
+                    }
+                }
+
+            }
+
+            .block-head {
+                cursor: pointer;
+                padding: 8px 25px;
+                
+                .actions {
+                    width: 100%;
+                    color: $color-blue;
+                    .title {
+                        margin: 5px 0;
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                    span {
+                        margin-right: 0;
+                        padding: {
+                            left: 10px;
+                            bottom: 5px;
+                        }
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                    .copy {
+                        color: $color-danger;
+                    } 
+                }
+                &:hover {
+                    background-color: #f7fbfd;
+                }
+            }
+
+            .block-content {
+                border-top: 1px solid #EAECF0;
+                border-left: 4px solid #6BB5D8;
+                padding: 10px 25px 15px;
+
+                .add-item {
+                    cursor: pointer;
+                    
+                    span {
+                        margin: 3px 0 -3px;
+                        font-size: 16px;
+                        text-decoration: none;
+                    }
+
+                    &:hover {
+                        text-decoration: underline;
+                        
+                    }
+                }
+
+                .list {
+                    p {
+                        margin: 0;
+                        position: relative;
+                        width: 100%;
+                        b {
+                            font-size: 14px;
+                        }
+                        input {
+                            margin-left: 10px;
+                            padding-right: 30px;
+                        }
+                        .dashicons-no {
+                            position: absolute;
+                            top: 50%;
+                            right: 10px;
+                            border: 1px solid #3c434a;
+                            opacity: 0.6;
+                            border-radius: 50%;
+                            font-size: 18px;
+                            cursor: pointer;
+                            transform: translateY(-50%);   
+                            z-index: 1; 
+                            transition: opacity .4s;
+                            &:hover {
+                                border: 1px solid $color-blue;
+                                color: $color-blue;
+                                opacity: 1;
+                            }
+                        }
+                    }
+                    .item-icons {
+                        width: 100px;
+                        margin-left: 10px;
+                        flex-shrink: 0;
+                    }
+                }
+
+
+                .block-footer {
+                    margin-top: 15px;
+                }
+
+                hr {
+                    opacity: .8;
+                    margin: 15px -25px;
+                }
+            }
+        }
+    }
+
+    .add-quest {
+        background-color: $color-blue;
+        color: white;
+
+        &:hover {
+            background-color: #066998;
+        }
+    }
+  
 }
