--- a/public/css/admin.scss
+++ b/public/css/admin.scss
@@ -343,3 +343,95 @@ $padding-block-content-h: 25px;
 
   
 }
+.checkbox-switch {
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    width: 50px;
+    height: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+    line-height: 1.2;
+    font-size: 10px;
+}
+ 
+.checkbox-switch input.input-checkbox {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50px;
+    height: 25px;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.checkbox-switch .checkbox-animate {
+    position: relative;
+    width: 50px;
+    height: 25px;
+    background-color: #95a5a6;
+    -webkit-transition: background 0.25s ease-out 0s;
+    transition: background 0.25s ease-out 0s;
+}
+
+.checkbox-switch .checkbox-animate:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    background-color: #7f8c8d;
+    top: 5px;
+    left: 5px;
+     -webkit-transition: left 0.3s ease-out 0s;
+    transition: left 0.3s ease-out 0s;
+    z-index: 10;
+}
+
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate {
+    background-color: #2ecc71;
+}
+
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate:before {
+    left: 30px;
+    background-color: #27ae60;
+}
+
+.checkbox-switch .checkbox-off,
+.checkbox-switch .checkbox-on {
+    float: left;
+    color: #fff;
+    font-weight: 700;
+    padding-top: 6px;
+     -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+}
+
+.checkbox-switch .checkbox-off {
+    margin-left: 25px;
+    opacity: 1;
+}
+
+.checkbox-switch .checkbox-on {
+    display: none;
+    float: right;
+    margin-right: 25px;
+    opacity: 0;
+}
+
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate .checkbox-off {
+    display: none;
+    opacity: 0;
+}
+
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate .checkbox-on {
+    display: block;
+    opacity: 1;
+}
