--- a/public/css/admin.scss
+++ b/public/css/admin.scss
@@ -161,6 +161,8 @@ $padding-block-content-h: 25px;
         p {
             font-weight: 600;
             font-size: 14px;
+            margin-bottom: 5px;
+
             sup {
                 color: $color-danger;
                 font-weight: 700;
@@ -188,26 +190,32 @@ $padding-block-content-h: 25px;
             &:hover {
                 background-color: $color-blue;
                 color: white;
+            } 
+
+            .spinner-border {
+                width: 1rem; 
+                height: 1rem;
+                margin-right: 12px;
             }
         }
     }
     .wrap-blocks {
         background-color: #fff;
         border-radius: 8px;
-        box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.1);
+        box-shadow: 0px 1px 1px rgba(16, 24, 40, 0.3);
+        overflow: hidden;
+        margin-top: 10px;
+        border: 1px solid #EAECF0;
 
         .head {
             font-size: 16px;
             font-weight: 400;
-            min-height: 64px;
-            padding: { 
-                top: 25px;
-                bottom: 25px;
-                right: 24px;
-                left: 24px; 
-            }
-            span {
-                font-weight: 700;
+            min-height: 52px;
+            padding:  15px 24px 0; 
+            color: #383838;
+
+            h5 {
+                font-weight: 600;
             }
         }
 
@@ -223,17 +231,43 @@ $padding-block-content-h: 25px;
                     &:hover {
                         background: #D8EBF5;
                     }
+
+                    .block-number {
+                        border: 1px solid $color-blue;
+                        color: $color-blue;
+                    }
                 }
 
             }
 
             .block-head {
                 cursor: pointer;
-                padding: 8px 25px;
+                padding: 8px 25px 8px 50px;
+                position: relative;
                 
+                .block-number {
+                    width: 21px;
+                    height: 21px;
+                    border: 1px solid #bfbfc2;
+                    border-radius: 50%;
+                    position: absolute; 
+                    left: 10px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    font-size: 10px;
+                    font-weight: 700;
+                    text-align: center;
+                    padding: { 
+                        top: 1px;
+                        right: 1px;
+                    }
+                    color: #656e77;
+                }
+
                 .actions {
                     width: 100%;
                     color: $color-blue;
+
                     .title {
                         margin: 5px 0;
                         &:hover {
@@ -242,8 +276,9 @@ $padding-block-content-h: 25px;
                     }
                     span {
                         margin-right: 0;
+                        font-size: 14px;
                         padding: {
-                            left: 10px;
+                            right: 10px;
                             bottom: 5px;
                         }
                         &:hover {
@@ -256,6 +291,13 @@ $padding-block-content-h: 25px;
                 }
                 &:hover {
                     background-color: #f7fbfd;
+                }
+
+                .dashicons-before::before {
+                    transition: all 0.3s;
+                }
+                .dashicons-before.arrow-down::before { 
+                    transform: scale(-1);
                 }
             }
 
@@ -330,6 +372,11 @@ $padding-block-content-h: 25px;
         }
     }
 
+    .wrap-add-block label {
+        font-size: 13px;
+        font-style: italic;
+        margin-bottom: 0;
+    }
     .add-block {
         background-color: $color-blue;
         color: white;
@@ -434,4 +481,18 @@ $padding-block-content-h: 25px;
 .checkbox-switch input.input-checkbox:checked + .checkbox-animate .checkbox-on {
     display: block;
     opacity: 1;
+}
+
+.slide-fade-enter-active {
+    transition: all 0.2s ease-out;
+}
+
+.slide-fade-leave-active {
+    transition: all 0.2s ease-in;
+}
+
+.slide-fade-enter-from,
+.slide-fade-leave-to {
+    transform: translateX(20px);
+    opacity: 0;
 }
